--- a/configs/seq2seq/baseline_opus_books_en_fr.yaml
+++ b/configs/seq2seq/baseline_opus_books_en_fr.yaml
@@ -5,20 +5,21 @@ model:
   architecture: transformer_seq2seq
   vocab_size: 0
   d_model: 256
-  nhead: 8
+  num_heads: 8
   num_layers: 4
   dim_feedforward: 1024
   dropout: 0.1
-  max_seq_len: 128
+  max_seq_len: 256
   seq2seq:
     shared_vocab: true
 
 data:
   seq_dataset: opus_books_en_fr
   batch_size: 16
-  max_len: 128
-  limit: 200
+  seq_len: 256
+  #limit: 200
 
 training:
-  epochs: 2
+  epochs: 5
   lr: 0.0003
+  seed: 0
