--- a/configs/seq2seq/set_only_opus_books_en_fr.yaml
+++ b/configs/seq2seq/set_only_opus_books_en_fr.yaml
@@ -1,7 +1,9 @@
 task: seq2seq
 
 model:
-  family: encoder_set_only
+  implementation: encoder_set_only
+  attention_family: dense
+  backend: exact
   vocab_size: 0
   d_model: 256
   num_layers: 4
@@ -10,7 +12,6 @@ model:
   stride: 16
   dropout: 0.1
   max_seq_len: 256
-  backend: dense_exact
   router_topk: 4
   feature_mode: hashed_counts
   router_type: learned
