Normalized names and yamls to new attention families and implementations

--- a/configs/seq2seq/baseline_wmt14_fr_en.yaml
+++ b/configs/seq2seq/baseline_wmt14_fr_en.yaml
@@ -7,7 +7,7 @@ model:
   architecture: transformer_seq2seq
   vocab_size: 0
   d_model: 256
-  nhead: 8
+  num_heads: 8
   num_layers: 4
   dim_feedforward: 1024
   dropout: 0.1
