--- a/configs/seq2seq/baseline_wmt14_fr_en.yaml
+++ b/configs/seq2seq/baseline_wmt14_fr_en.yaml
@@ -11,6 +11,9 @@ model:
   num_layers: 4
   dim_feedforward: 1024
   dropout: 0.1
+  attn_dropout: null
+  resid_dropout: null
+  ffn_dropout: null
   max_seq_len: 128
   seq2seq:
     shared_vocab: true
