--- a/configs/seq2seq/set_only_opus_books_en_fr.yaml
+++ b/configs/seq2seq/set_only_opus_books_en_fr.yaml
@@ -11,6 +11,9 @@ model:
   window_size: 32
   stride: 16
   dropout: 0.1
+  attn_dropout: null
+  resid_dropout: null
+  ffn_dropout: null
   max_seq_len: 256
   router_topk: 4
   feature_mode: hashed_counts
